fixed position of signature on mobile device

--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ h1 {
     }
 
     .github{
-        position: fixed;
+        position: absolute;
         margin-left: 130px;
         bottom: 0px;
     }
